...
        android:scaleType="fitCenter"
        android:src="@drawable/status_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fridge_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feed_button" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
...
